<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content">
        <Button
                android:id="@+id/dailies"
                android:layout_width="179dp"
                android:layout_height="146dp"
                android:onClick="onClick"
                android:background="@drawable/dailies_incomp" android:layout_marginRight="1dp"/>

        <Button
                android:id="@+id/create_item_button"
                android:layout_width="179dp"
                android:layout_height="146dp"
                android:onClick="onClick"
                android:background="@drawable/create_item" android:layout_marginLeft="1dp"/>
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content">
    <Button
        android:id="@+id/play_button"
        android:layout_width="179dp"
        android:layout_height="146dp"
        android:onClick="onClick"
        android:background="@drawable/play_game" android:layout_marginRight="1dp" android:layout_marginTop="2dp"/>

    <Button
        android:id="@+id/list_button"
        android:layout_width="179dp"
        android:layout_height="146dp"
        android:onClick="onClick"
        android:background="@drawable/list_words" android:layout_marginLeft="1dp" android:layout_marginTop="2dp"/>

    </LinearLayout>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RadioGroup
            android:id="@+id/lang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/english"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/english" />

            <RadioButton
                android:id="@+id/telugu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/telugu" />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/sort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="29dp" >

            <RadioButton
                android:id="@+id/alphabetical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/alphabetical" />

            <RadioButton
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date" />
        </RadioGroup>
    </RelativeLayout>
    <Button
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="SYNC"
            android:onClick="onClick"
            android:id="@+id/sync" android:layout_gravity="center" android:textColor="#9c9a9b"
            android:background="#ebebeb"/>
    <Button
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="SYNC Admin"
            android:onClick="onClick"
            android:id="@+id/sync_admin" android:textColor="#9c9a9b"
            android:background="#ebebeb" android:visibility="invisible" android:layout_marginTop="10dp"/>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:id="@+id/admin" android:layout_gravity="left|center_vertical"
            android:background="@android:color/transparent"/>

</LinearLayout>